--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -59,7 +59,7 @@
 
 - name: inject seed node {{ (ee_masters|select()|list|unique)[0] }} into es_config 
   set_fact:
-    es_config: "{{ es_config|combine(ee_config_masters_seeding_list) }}"
+    es_config: "{{ es_config|combine(ee_config_masters_list) }}"
 - name: run role elastic.elasticsearch role
   include_role:
     name: elastic.elasticsearch
