--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -60,6 +60,8 @@
 - name: inject seed node {{ (ee_masters|select()|list|unique)[0] }} into es_config 
   set_fact:
     es_config: "{{ es_config|combine(ee_config_masters_list) }}"
+  when: ansible_play_hosts_all|length > 1
+
 - name: run role elastic.elasticsearch role
   include_role:
     name: elastic.elasticsearch
